# stl-organizer

./: .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  README.md  TODO.md  go.mod  main.go  notes.md  package-lock.json  package.json  stl-organizer
src/: App.vue  main.js  quasar-user-options.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql_migrations/: V1__settings_directories.sql
src-tauri/src/: db.rs  error.rs  main.rs  scan.rs  settings.rs
src/components/: HelloWorld.vue
src/pages/: Settings.vue
stl-organizer/: package.json
