[package]
name = "stl-organizer"
version = "0.1.0"
description = "Desktop application for organizing downloaded 3D printing files."
authors = ["John Hungerford"]
license = "Apache 2.0"
repository = "https://github.com/jhungerford/stl-organizer"
default-run = "stl-organizer"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.1", features =["api-all"]}
rusqlite = { version = "0.24.2", features = ["bundled"]}
refinery = { version = "0.5.0", features = ["rusqlite"]}
zip = "0.5"
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"]}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
